bookmarks bar no longer collapses as "true", it collapses as "" now.

--- a/theme/ffu-global-positioning.css
+++ b/theme/ffu-global-positioning.css
@@ -108,7 +108,7 @@ this allows us to track and work with them throughout the theme
 /*
 even when the toolbar is not visible, we track
 */
-:root:has(#PersonalToolbar[collapsed="true"]) {--uc-bookbar-height: 0px !important;}
+:root:has(#PersonalToolbar[collapsed=""]) {--uc-bookbar-height: 0px !important;}
 :root:has(#toolbar-menubar[inactive="true"]) {--uc-menubar-height: 0px !important;}
 :root { @media -moz-pref("sidebar.verticalTabs") {--uc-tabbar-height: 0px !important;}}
 @media (-moz-os-version: macos), (-moz-platform: macos) { :root {--uc-menubar-height: 0px !important;}}
